# SplitEngineShowcase

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
cmake/: Vulkan.cmake
include/SplitEngineShowcase/: Assets.hpp  SpriteTexture.hpp
include/SplitEngineShowcase/Component/: AudioSource.hpp  Camera.hpp  Physics.hpp  Player.hpp  Sprite.hpp  SpriteRenderer.hpp  Transform.hpp
include/SplitEngineShowcase/System/: AudioSourcePlayer.hpp  Camera.hpp  Debug.hpp  Physics.hpp  PlayerController.hpp  SpriteRendering.hpp
res/shaders/: globals.glsl
res/shaders/debug/: Debug.frag  Debug.vert
src/: SpriteTexture.cpp
src/Systems/: AudioSourcePlayer.cpp  Camera.cpp  Debug.cpp  Physics.cpp  PlayerController.cpp  SpriteRendering.cpp
